[package]
name = "tmux-session"
version = "0.1.0"
authors = ["Jamie Cunliffe <Jamie.Cunliffe@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tmux_interface = "0.0.6"
tui = { git = "https://github.com/fdehau/tui-rs" }
termion = "1.5"