[package]
name = "tmux-session"
version = "0.1.0"
authors = ["Jamie Cunliffe <Jamie.Cunliffe@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tmux_interface = "0.0.6"
tui = { git = "https://github.com/fdehau/tui-rs" }
termion = "1.5"
fuzzy-matcher = "0.3.4"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.6"
shellexpand = "1.1.1"
xdg = "2.2.0"